# PrimeXT

./: .editorconfig  .gitignore  .gitmodules  11.patch  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  backup.bat  backup.lst  configure_debug_win32.bat  configure_release_win32.bat  debug.bat  release.bat  vcpkg.json  waf.bat  wscript  xash_main.dsw
client/: CMakeLists.txt  ammo.cpp  ammo.h  ammo_secondary.cpp  ammohistory.cpp  ammohistory.h  battery.cpp  brush_material.h  cdll_int.cpp  client.dsp  client_weapon_layer_impl.cpp  client_weapon_layer_impl.h  death.cpp  enginecallback.h  entity.cpp  flashlight.cpp  flashlight.h  geiger.cpp  health.cpp  health.h  hud.cpp  hud.h  hud_flashlight.cpp  hud_msg.cpp  hud_redraw.cpp  hud_update.cpp  imgui_manager.cpp  imgui_manager.h  input.cpp  input_mouse.cpp  input_mouse.h  input_xash3d.cpp  inputw32.cpp  menu.cpp  message.cpp  motd.cpp  parsemsg.cpp  parsemsg.h  postfx_controller.cpp  postfx_controller.h  (+16 more)
client/entities/: cl_env_dynlight.cpp  cl_env_dynlight.h
client/events/: base_game_event.cpp  base_game_event.h  crossbow_fire_event.cpp  crossbow_fire_event.h  crowbar_swing_event.cpp  crowbar_swing_event.h  egon_fire_event.cpp  egon_fire_event.h  egon_stop_event.cpp  egon_stop_event.h  game_event_manager.cpp  game_event_manager.h  game_event_utils.cpp  game_event_utils.h  gauss_fire_event.cpp  gauss_fire_event.h  gauss_spin_event.cpp  gauss_spin_event.h  glock_fire_event.cpp  glock_fire_event.h  hornetgun_fire_event.cpp  hornetgun_fire_event.h  mp5_fire_event.cpp  mp5_fire_event.h  python_fire_event.cpp  python_fire_event.h  rpg_fire_event.cpp  rpg_fire_event.h  shotgun_fire_event.cpp  shotgun_fire_event.h  snark_throw_event.cpp  snark_throw_event.h  tripmine_deploy_event.cpp  tripmine_deploy_event.h
client/render/: cl_dlight.h  gl_aurora.cpp  gl_aurora.h  gl_backend.cpp  gl_cubemap.cpp  gl_cubemap.h  gl_cubemaps.cpp  gl_cull.cpp  gl_cvars.cpp  gl_cvars.h  gl_debug.cpp  gl_debug.h  gl_debug_overlay_2d.cpp  gl_debug_overlay_2d.h  gl_debug_scope.cpp  gl_debug_scope.h  gl_debug_visualizer_backend.cpp  gl_debug_visualizer_backend.h  gl_decals.cpp  gl_decals.h  gl_deferred.cpp  gl_dlight.cpp  gl_export.cpp  gl_export.h  gl_framebuffer.cpp  gl_framebuffer.h  gl_frustum.cpp  gl_frustum.h  gl_grass.cpp  gl_grass.h  gl_imgui.cpp  gl_imgui.h  gl_imgui_backend.cpp  gl_imgui_backend.h  gl_lightmap.cpp  gl_local.h  gl_material.h  gl_movie.cpp  gl_occlusion.cpp  gl_occlusion.h  (+87 more)
client/ui/: imgui_manager.cpp  imgui_manager.h  imgui_window.h  imgui_window_system.cpp  imgui_window_system.h  ui_demo_window.cpp  ui_demo_window.h  ui_main.cpp  ui_material_editor.cpp  ui_material_editor.h  ui_postfx_menu.cpp  ui_postfx_menu.h  vgui_support_int.cpp  vgui_support_int.h
client/visualizer/: debug_visualizer.cpp  debug_visualizer.h
game_launcher/: CMakeLists.txt  app_info.h  game.cpp  game.manifest  game.rc
server/: CMakeLists.txt  UserMessages.cpp  activitymap.h  airtank.cpp  animating.cpp  animation.cpp  base_tank.cpp  base_tank.h  basemonster.h  bmodels.cpp  buttons.cpp  cbase.cpp  cbase.h  client.cpp  client.h  combat.cpp  crossbow.cpp  crowbar.cpp  datamap.h  decals.h  defaultai.cpp  dll_int.cpp  doors.cpp  doors.h  effects.cpp  effects.h  egon.cpp  ehandle.cpp  ehandle.h  enginecallback.h  explode.cpp  explode.h  extdll.h  func_break.cpp  func_break.h  func_monitor.cpp  func_tank.cpp  game.cpp  game.h  gamerules.cpp  (+83 more)
server/entities/: aiscripted_sequence.cpp  aiscripted_sequence.h  ammo_357.cpp  ammo_357.h  ammo_9mmbox.cpp  ammo_9mmbox.h  ammo_9mmclip.cpp  ammo_9mmclip.h  ammo_buckshot.cpp  ammo_buckshot.h  ammo_egonclip.cpp  ammo_egonclip.h  ammo_gaussclip.cpp  ammo_gaussclip.h  ammo_mp5clip.cpp  ammo_mp5clip.h  ammo_mp5grenades.cpp  ammo_mp5grenades.h  ammo_rpgclip.cpp  ammo_rpgclip.h  apache_rocket.cpp  apache_rocket.h  base_tank.cpp  base_tank.h  beam.cpp  beam.h  bigmomma_mortar.cpp  bigmomma_mortar.h  bullsquid_split.cpp  bullsquid_split.h  button_target.cpp  button_target.h  controller_energy_ball.cpp  controller_head_ball.cpp  controller_head_ball.h  controller_headball.cpp  controller_zapball.cpp  controller_zapball.h  conveyor_setspeed.cpp  conveyor_setspeed.h  (+325 more)
server/gamerules/: multiplay_gamerules.cpp  teamplay_gamerules.cpp  teamplay_gamerules.h
server/items/: airtank.cpp  airtank.h  antidote.cpp  antidote.h  battery.cpp  battery.h  generic.cpp  generic.h  healthkit.cpp  healthkit.h  items.cpp  longjump.cpp  longjump.h  securitycard.cpp  securitycard.h  suit.cpp  suit.h
server/monsters/: activity.h  activitymap.h  aflock.cpp  aflock.h  aflockspawn.cpp  aflockspawn.h  agrunt.cpp  agrunt.h  animating.cpp  animation.cpp  animation.h  apache.cpp  apache.h  babyheadcrab.cpp  babyheadcrab.h  barnacle.cpp  barnacle.h  barney.cpp  barney.h  basemonster.h  baseturret.cpp  baseturret.h  bigmomma.cpp  bigmomma.h  bloater.cpp  bloater.h  bullsquid.cpp  bullsquid.h  controller.cpp  controller.h  defaultai.h  flyingmonster.cpp  flyingmonster.h  gargantua.cpp  gargantua.h  genericmonster.cpp  genericmonster.h  gman.cpp  gman.h  hassassin.cpp  (+61 more)
server/physics/: NxErrorStream.cpp  NxErrorStream.h  NxUserStream.cpp  NxUserStream.h  debug_renderer.h  decomposed_shape.cpp  decomposed_shape.h  meshdesc.cpp  meshdesc.h  trace.cpp  tracemesh.cpp  tracemesh.h
server/physx/: assert_handler.cpp  assert_handler.h  collision_filter_data.cpp  collision_filter_data.h  contact_modify_callback.cpp  contact_modify_callback.h  contact_report.cpp  contact_report.h  debug_renderer.cpp  debug_renderer.h  decomposed_shape.cpp  decomposed_shape.h  error_stream.cpp  error_stream.h  event_handler.cpp  event_handler.h  holdable_item_controller.cpp  holdable_item_controller.h  io_streams.cpp  io_streams.h  physx_impl.cpp  physx_impl.h
server/ropes/: CElectrifiedWire.cpp  CElectrifiedWire.h  CRope.cpp  CRope.h  CRopeSegment.cpp  CRopeSegment.h
server/weapons/: crossbow.cpp  crossbow.h  crowbar.cpp  crowbar.h  cycler_weapon.cpp  egon.cpp  (+53 more)
tracy_client/: CMakeLists.txt  tracy_client.cpp  tracy_client.h
utils/: CMakeLists.txt  vhlt_changes.txt
(+1148 files in other folders)
